--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RPG_PI2_20211">
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".PersonagemActivity"></activity>
+        <activity android:name=".HomeActivity" />
         <activity android:name=".CadastroActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
