--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RPG_PI2_20211">
-        <activity android:name=".PersonagemActivity"></activity>
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".CadastroActivity" />
-        <activity android:name=".EsqueciActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.activity.PersonagemActivity"></activity>
+        <activity android:name=".ui.activity.HomeActivity" />
+        <activity android:name=".ui.activity.CadastroActivity" />
+        <activity android:name=".ui.activity.EsqueciActivity" />
+        <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
