--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
     /** Kotlin Libraries */
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
