--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
 //
     ext {
         kotlin_version = "1.4.31"
+//        hiltVersion = "2.33-beta"
         hiltVersion = "2.31-alpha"
         hiltAndroidXVersion = '1.0.0-alpha03'
     }
