--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,7 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-//
     ext {
-        kotlin_version = "1.4.31"
-//        hiltVersion = "2.33-beta"
-        hiltVersion = "2.31-alpha"
+        kotlin_version = "1.4.32"
+        hiltVersion = "2.33-beta"
         hiltAndroidXVersion = '1.0.0-alpha03'
     }
 
