--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'com.google.android.material:material:<version>'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
@@ -119,6 +121,8 @@ dependencies {
 
     /** ViewPager Dots Indicator */
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+
+    /**redis*/
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
