--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
 
     <uses-feature android:name="android.hardware.type.watch" />
 
+    <uses-permission
+        android:name="android.permission.INTERNET" />
+
     <application
         android:name=".RpgApp"
         android:allowBackup="true"
