--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,4 +140,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-common-java8:2.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
 
+    //MAP
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+
 }
