--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha02"
+
     implementation 'com.google.android.material:material:<version>'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
